# running-wasm-component

./: README.md
examples/elixir/: .gitignore  README.md  mix.exs
examples/elixir/lib/: wasm_example.ex
examples/elixir/lib/wasm_example/: application.ex
examples/elixir/test/: wasm_example_test.exs
examples/frontend/: Component.tsx  index.html  index.tsx  package.json  tsconfig.json
examples/javascript/: .gitignore  README.md  index.js  package.json
examples/python/: .gitignore  README.md  app.c  main.py  pyproject.toml
examples/python/src/: __init__.py  config.py  exceptions.py  models.py  runners.py
examples/typescript/: .gitignore  README.md  actions.wasm  index.ts  package.json
examples/typescript/src/: App.css  App.tsx  RunWasm.tsx
